--- a/SchoolProject.Web/SchoolProject.Web.csproj
+++ b/SchoolProject.Web/SchoolProject.Web.csproj
@@ -9,15 +9,18 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Azure.Storage.Blobs" Version="12.13.1" />
-        <PackageReference Include="Azure.Storage.Files.Shares" Version="12.1.0" />
-        <PackageReference Include="Azure.Storage.Queues" Version="12.11.1" />
-        <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.14" />
-        <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="6.0.14">
+        <PackageReference Include="Azure.Storage.Blobs" Version="12.16.0" />
+        <PackageReference Include="Azure.Storage.Files.Shares" Version="12.14.0" />
+        <PackageReference Include="Azure.Storage.Queues" Version="12.14.0" />
+        <PackageReference Include="Google.Apis.Storage.v1" Version="1.60.0.2981" />
+        <PackageReference Include="Google.Cloud.Storage.V1" Version="4.6.0" />
+        <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="6.0.18" />
+        <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.18" />
+        <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="6.0.18">
             <PrivateAssets>all</PrivateAssets>
             <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
         </PackageReference>
-        <PackageReference Include="Microsoft.Extensions.Azure" Version="1.5.0" />
+        <PackageReference Include="Microsoft.Extensions.Azure" Version="1.6.3" />
         <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.18.1" />
     </ItemGroup>
 
