--- a/SchoolProject.Web/SchoolProject.Web.csproj
+++ b/SchoolProject.Web/SchoolProject.Web.csproj
@@ -12,6 +12,7 @@
         <PackageReference Include="Azure.Storage.Blobs" Version="12.16.0" />
         <PackageReference Include="Azure.Storage.Files.Shares" Version="12.14.0" />
         <PackageReference Include="Azure.Storage.Queues" Version="12.14.0" />
+        <PackageReference Include="CsvHelper" Version="30.0.1" />
         <PackageReference Include="DnsClient" Version="1.7.0" />
         <PackageReference Include="Google.Apis.Storage.v1" Version="1.61.0.3089" />
         <PackageReference Include="Google.Cloud.Storage.V1" Version="4.6.0" />
@@ -31,6 +32,7 @@
         <PackageReference Include="Microsoft.Web.LibraryManager.Build" Version="2.1.175" />
         <PackageReference Include="MySql.EntityFrameworkCore" Version="7.0.2" />
         <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+        <PackageReference Include="Serilog" Version="3.0.1" />
     </ItemGroup>
 
     <ItemGroup>
