--- a/SchoolProject.Web/appsettings.json
+++ b/SchoolProject.Web/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Debug"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "IdentityDataContextConnection": "Server=(localdb)\\mssqllocaldb;Database=SchoolProject.Web;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
