--- a/SchoolProject.Web/SchoolProject.Web.csproj
+++ b/SchoolProject.Web/SchoolProject.Web.csproj
@@ -9,29 +9,34 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Azure.Storage.Blobs" Version="12.16.0" />
-        <PackageReference Include="Azure.Storage.Files.Shares" Version="12.14.0" />
-        <PackageReference Include="Azure.Storage.Queues" Version="12.14.0" />
+        <PackageReference Include="Azure.Storage.Blobs" Version="12.17.0" />
+        <PackageReference Include="Azure.Storage.Files.Shares" Version="12.15.0" />
+        <PackageReference Include="Azure.Storage.Queues" Version="12.15.0" />
         <PackageReference Include="CsvHelper" Version="30.0.1" />
         <PackageReference Include="DnsClient" Version="1.7.0" />
-        <PackageReference Include="Google.Apis.Storage.v1" Version="1.61.0.3089" />
+        <PackageReference Include="Google.Apis.Storage.v1" Version="1.61.0.3112" />
         <PackageReference Include="Google.Cloud.Storage.V1" Version="4.6.0" />
         <PackageReference Include="Microsoft.ApplicationInsights.AspNetCore" Version="2.21.0" />
-        <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="7.0.8" />
+        <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="7.0.9" />
+        <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="7.0.9" />
         <PackageReference Include="Microsoft.Build.Framework" Version="17.6.3" />
-        <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.8" />
-        <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="7.0.8" />
-        <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="7.0.8" />
-        <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.8" />
-        <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="7.0.8">
+        <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.9" />
+        <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="7.0.9">
+          <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+          <PrivateAssets>all</PrivateAssets>
+        </PackageReference>
+        <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="7.0.9" />
+        <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="7.0.9" />
+        <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.9" />
+        <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="7.0.9">
             <PrivateAssets>all</PrivateAssets>
             <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
         </PackageReference>
         <PackageReference Include="Microsoft.Extensions.Azure" Version="1.6.3" />
         <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.18.1" />
-        <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="7.0.7" />
+        <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="7.0.8" />
         <PackageReference Include="Microsoft.Web.LibraryManager.Build" Version="2.1.175" />
-        <PackageReference Include="MySql.EntityFrameworkCore" Version="7.0.2" />
+        <PackageReference Include="MySql.EntityFrameworkCore" Version="7.0.5" />
         <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
         <PackageReference Include="Serilog" Version="3.0.1" />
     </ItemGroup>
