much more to go

--- a/SchoolProject.Web/SchoolProject.Web.csproj
+++ b/SchoolProject.Web/SchoolProject.Web.csproj
@@ -17,6 +17,10 @@
         <PackageReference Include="Google.Apis.Storage.v1" Version="1.61.0.3112" />
         <PackageReference Include="Google.Cloud.Storage.V1" Version="4.6.0" />
         <PackageReference Include="Microsoft.ApplicationInsights.AspNetCore" Version="2.21.0" />
+        <PackageReference Include="Microsoft.AspNetCore.Authentication.Facebook" Version="7.0.9" />
+        <PackageReference Include="Microsoft.AspNetCore.Authentication.Google" Version="7.0.9" />
+        <PackageReference Include="Microsoft.AspNetCore.Authentication.MicrosoftAccount" Version="7.0.9" />
+        <PackageReference Include="Microsoft.AspNetCore.Authentication.Twitter" Version="7.0.9" />
         <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="7.0.9" />
         <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="7.0.9" />
         <PackageReference Include="Microsoft.Build.Framework" Version="17.6.3" />
@@ -44,7 +48,6 @@
     </ItemGroup>
 
     <ItemGroup>
-        <Folder Include="Controllers\API\" />
         <Folder Include="Data\DataContexts\DataAccess\" />
         <Folder Include="Docs\" />
         <Folder Include="wwwroot\images\" />
