Invalid phone number format, to correct

--- a/SchoolProject.Web/appsettings.Development.json
+++ b/SchoolProject.Web/appsettings.Development.json
@@ -2,6 +2,8 @@
   "Logging": {
     "LogLevel": {
       "Default": "Debug",
+      "SchoolProject.Web": "Debug",
+      "Microsoft": "Debug",
       "Microsoft.AspNetCore": "Debug"
     }
   }
