continuing seeding and verifying the final results, more needs to be done

--- a/SchoolProject.Web/SchoolProject.Web.csproj
+++ b/SchoolProject.Web/SchoolProject.Web.csproj
@@ -35,6 +35,7 @@
             <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
             <PrivateAssets>all</PrivateAssets>
         </PackageReference>
+        <PackageReference Include="Microsoft.EntityFrameworkCore.Proxies" Version="7.0.9" />
         <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="7.0.9"/>
         <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="7.0.9"/>
         <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.9"/>
