--- a/SchoolProject.Web/SchoolProject.Web.csproj
+++ b/SchoolProject.Web/SchoolProject.Web.csproj
@@ -21,6 +21,7 @@
         <PackageReference Include="DnsClient" Version="1.7.0"/>
         <PackageReference Include="Google.Apis.Storage.v1" Version="1.61.0.3112"/>
         <PackageReference Include="Google.Cloud.Storage.V1" Version="4.6.0"/>
+        <PackageReference Include="MailKit" Version="4.1.0" />
         <PackageReference Include="Microsoft.ApplicationInsights.AspNetCore" Version="2.21.0"/>
         <PackageReference Include="Microsoft.AspNetCore.Authentication.Facebook" Version="7.0.10" />
         <PackageReference Include="Microsoft.AspNetCore.Authentication.Google" Version="7.0.10" />
