--- a/SchoolProject.Web/appsettings.json
+++ b/SchoolProject.Web/appsettings.json
@@ -7,8 +7,55 @@
       "Microsoft.AspNetCore": "Debug"
     }
   },
+
   "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "IdentityDataContextConnection": "Server=(localdb)\\mssqllocaldb;Database=SchoolProject.Web;Trusted_Connection=True;MultipleActiveResultSets=true"
+  "Serilog": {
+    "Using": [
+      "Serilog.Sinks.Console",
+      "Serilog.Sinks.File"
+    ],
+    "MinimumLevel": "Debug",
+    "WriteTo": [
+      {
+        "Name": "Console",
+        "Args": {
+          "outputTemplate": "[Serilog][{Timestamp:HH:mm:ss} {SourceContext} [{Level}] {Message}{NewLine}{Exception}"
+        }
+      },
+      {
+        "Name": "File",
+        "Args": {
+          "path": "./data/Logs/logs.txt",
+          "outputTemplate": "[{Timestamp:HH:mm:ss} {SourceContext} [{Level}] {Message}{NewLine}{Exception}",
+          "formatter": {
+            "type": "Serilog.Formatting.Compact.CompactJsonFormatter, Serilog.Formatting.Compact"
+          }
+        }
+      },
+      {
+        "Name": "File",
+        "Args": {
+          "path": "./data/Logs/important-logs.json",
+          "formatter": "Serilog.Formatting.Json.JsonFormatter, Serilog"
+        },
+        "RestrictedToMinimumLevel": "Warning"
+      },
+      {
+        "Name": "File",
+        "Args": {
+          "path": "./data/Logs/all-daily-.logs"
+        },
+        "rollingInterval": "Day"
+      }
+    ],
+    "Enrich": [
+      "FromLogContext",
+      "WithMachineName",
+      "WithThreadId"
+    ],
+    "Properties": {
+      "Application": "SchoolProject.Web"
+    }
+
   }
 }
