--- a/SchoolProject.Web/SchoolProject.Web.csproj
+++ b/SchoolProject.Web/SchoolProject.Web.csproj
@@ -37,7 +37,7 @@
         <PackageReference Include="DnsClient" Version="1.7.0" />
         <PackageReference Include="EfCore.SchemaCompare" Version="7.0.0" />
         <PackageReference Include="ErikEJ.EntityFrameworkCore.DgmlBuilder" Version="6.0.0" />
-        <PackageReference Include="Google.Apis.Storage.v1" Version="1.62.0.3171" />
+        <PackageReference Include="Google.Apis.Storage.v1" Version="1.62.1.3186" />
         <PackageReference Include="Google.Cloud.Storage.V1" Version="4.6.0" />
         <PackageReference Include="MailKit" Version="4.2.0" />
         <PackageReference Include="Microsoft.ApplicationInsights.AspNetCore" Version="2.21.0" />
@@ -68,8 +68,8 @@
         <PackageReference Include="Microsoft.Extensions.Azure" Version="1.7.0" />
         <PackageReference Include="Microsoft.Extensions.Identity.Core" Version="7.0.11" />
         <PackageReference Include="Microsoft.Extensions.Identity.Stores" Version="7.0.11" />
-        <PackageReference Include="Microsoft.Identity.Web" Version="2.13.4" />
-        <PackageReference Include="Microsoft.Identity.Web.UI" Version="2.13.4" />
+        <PackageReference Include="Microsoft.Identity.Web" Version="2.14.0" />
+        <PackageReference Include="Microsoft.Identity.Web.UI" Version="2.14.0" />
         <PackageReference Include="Microsoft.TypeScript.MSBuild" Version="5.2.2">
             <PrivateAssets>all</PrivateAssets>
             <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
@@ -80,6 +80,8 @@
         <PackageReference Include="Microsoft.Web.LibraryManager.Build" Version="2.1.175" />
         <PackageReference Include="MySql.EntityFrameworkCore" Version="7.0.5" />
         <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+        <PackageReference Include="Sentry" Version="3.39.1" />
+        <PackageReference Include="Sentry.AspNetCore" Version="3.39.1" />
         <PackageReference Include="Serilog" Version="3.0.1" />
         <PackageReference Include="Serilog.AspNetCore" Version="7.0.0" />
         <PackageReference Include="Serilog.Settings.Configuration" Version="7.0.1" />
@@ -110,6 +112,7 @@
         <Folder Include="Data\DataContexts\DataAccess\" />
         <Folder Include="Data\Repositories\Interfaces\" />
         <Folder Include="Docs\" />
+        <Folder Include="Helpers\Views\" />
         <Folder Include="Models\PaginationViewModels\" />
         <Folder Include="wwwroot\js\Matrix\" />
     </ItemGroup>
