account register and reset pass

--- a/SchoolProject.Web/appsettings.json
+++ b/SchoolProject.Web/appsettings.json
@@ -21,7 +21,7 @@
   "ConnectionStrings:SP-SmarterASP-MSSQL": "Data Source=SQL6031.site4now.net;Initial Catalog=db_a9d330_schoolproject;User Id=db_a9d330_schoolproject_admin;Password=sexAPV4z6zCj8F_;MultipleActiveResultSets=true;TrustServerCertificate=True;",
   "ConnectionStrings:SP-SmarterASP-MySQL": "Server=MYSQL6008.site4now.net;Database=db_a9d330_schoolp;Uid=a9d330_schoolp;Pwd=sexAPV4z6zCj8F_;",
   "ConnectionStrings:SP-SQLite-Local": "Data Source=.\\Data\\SQL\\SchoolProject.sqlite;",
-  "Email:From": "emailwebprovidercodingwooo@gmail.com",
+  "Email:EmailFrom": "emailwebprovidercodingwooo@gmail.com",
   "Email:NameFrom": "Admin",
   "Email:Password": "xgmuryodfglgnfky",
   "Email:Port": "587",
